[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/planetMenu/planetMenuInfoPane.png" type="Texture" id=1]
[ext_resource path="res://baseTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/planetMenu/planetInfoDisplay.gd" type="Script" id=3]
[ext_resource path="res://resourceImages/Rocket Fuel/Rocket FuelInventory.png" type="Texture" id=4]
[ext_resource path="res://Roboto-Black.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 5 )

[node name="ColorRect" type="TextureRect"]
margin_right = 250.0
margin_bottom = 263.0
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="planetName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.0
margin_top = 16.0
margin_right = 86.0
margin_bottom = 52.0
theme = ExtResource( 2 )
align = 1

[node name="iconDisplay" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -78.0
margin_right = 40.0
margin_bottom = 2.0
expand = true
stretch_mode = 6

[node name="Button" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.5
margin_top = 59.0
margin_right = 28.5
margin_bottom = 101.0
theme = ExtResource( 2 )
text = "Go!"

[node name="fuelDisplay" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 12.0
margin_right = 20.0
margin_bottom = 52.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="fuelAmount" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = 16.0
margin_right = 30.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
